--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title:            【蜀小陈】书屋
+longtitle:        【蜀小陈】书屋
+author:           Alex Chen
+email:            chenxie@aliyun.com
 description: >
   Build Jekyll site with the GitBook style.
 
